--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <meta-data
+        android:name="com.google.android.gms.wallet.api.enabled"
+        android:value="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,24 +17,24 @@
         android:roundIcon="@drawable/salary"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".GooglePaymentActivity"
-            android:exported="false" >
+            android:name=".GooglePayActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".CryptoTrackerActivity"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".FeatureActivity"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -38,7 +42,7 @@
         <activity
             android:name=".registerActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.DayNight" >
+            android:theme="@style/Theme.AppCompat.DayNight">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -46,7 +50,7 @@
         <activity
             android:name=".loginActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.DayNight" >
+            android:theme="@style/Theme.AppCompat.DayNight">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,7 +63,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
