--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,27 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
+            android:name=".NextIncome"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".emi"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".first_home_page"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".resetpassword"
             android:exported="false">
             <meta-data
@@ -47,7 +68,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Fianlinc"
+            android:name=".Finalinc"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -83,13 +104,6 @@
         </activity>
         <activity
             android:name=".ChangePasswordActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".GooglePayActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
