--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
 }
@@ -33,8 +33,9 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(dir: 'libs',include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.google.android.gms:play-services-wallet:19.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -44,4 +45,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
