--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,28 @@
 buildscript {
+    repositories {
+//        maven { url 'https://jitpack.io' }
+    }
+
     dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'com.google.gms:google-services:4.3.15'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
 }
+
+//allprojects {
+//    repositories {
+//        maven { url 'https://jitpack.io' }
+//    }
+//}
+
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+
